--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="https://www.codelikethewind.org/content/images/size/w2000/2022/05/hello_world.png"
+    alt="Hello World from Space"
+    style="width:100%;max-width:460px"
+    ></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 
