Add another image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     style="width:100%;max-width:460px"
     ></div>
 <p>This is the first file in my new Git Repo.</p>
-<p>A new line in our file!</p>
+<p>Hem afegit imatges!</p>
+<div><img src="https://miro.medium.com/v2/resize:fit:949/1*YryX-5FXvrpFGkh8PsdEGQ.png" 
+    alt="Hello Git" 
+    style="width:100%;max-width:340px"></div>
 
 </body>
 </html>
